{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 889,
  "lineage": "12b12ce5-161a-ca6e-ffe4-a55c6810478b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:loadbalancer/app/test-alb/d32b074ce3a067c3",
            "arn_suffix": "app/test-alb/d32b074ce3a067c3",
            "dns_name": "test-alb-740421865.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:loadbalancer/app/test-alb/d32b074ce3a067c3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-alb",
            "security_groups": [
              "sg-0fce162f35cdba3d4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02db824f5a7fc5fe2"
              },
              {
                "subnet_id": "subnet-0cda38dab258b3ccf"
              }
            ],
            "subnets": [
              "subnet-02db824f5a7fc5fe2",
              "subnet-0cda38dab258b3ccf"
            ],
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development"
            },
            "vpc_id": "vpc-06dc50fdb423a122b",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.vpc.aws_security_group.load_balancer_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00740d01b254938b6",
            "public_dns": "ec2-52-76-235-251.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.76.235.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "nat-gw-ip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0fb7e8d875eeed52a",
            "public_dns": "ec2-54-251-96-221.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.251.96.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "nat-gw-ip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:internet-gateway/igw-0a4171e04ccb6a47f",
            "id": "igw-0a4171e04ccb6a47f",
            "owner_id": "621567429603",
            "vpc_id": "vpc-06dc50fdb423a122b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:listener/app/test-alb/d32b074ce3a067c3/3e3789cf8ba9a9b7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Path not found!",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:listener/app/test-alb/d32b074ce3a067c3/3e3789cf8ba9a9b7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:loadbalancer/app/test-alb/d32b074ce3a067c3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_alb.application_load_balancer",
            "module.vpc.aws_security_group.load_balancer_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:targetgroup/auth-target-group/e885e20f48afb03d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:listener-rule/app/test-alb/d32b074ce3a067c3/3e3789cf8ba9a9b7/5a5217f753afe026",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/authentication/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:listener-rule/app/test-alb/d32b074ce3a067c3/3e3789cf8ba9a9b7/5a5217f753afe026",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:listener/app/test-alb/d32b074ce3a067c3/3e3789cf8ba9a9b7",
            "priority": 100
          },
          "dependencies": [
            "module.alb.aws_alb.application_load_balancer",
            "module.alb.aws_lb_listener.listener",
            "module.alb.aws_lb_target_group.target_group",
            "module.vpc.aws_security_group.load_balancer_security_group",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:targetgroup/auth-target-group/e885e20f48afb03d",
            "arn_suffix": "targetgroup/auth-target-group/e885e20f48afb03d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,201,204,301,302,304",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:621567429603:targetgroup/auth-target-group/e885e20f48afb03d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "auth-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06dc50fdb423a122b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00740d01b254938b6",
            "id": "nat-079491ac00a51cca7",
            "network_interface_id": "eni-0e9533cfc612064dc",
            "private_ip": "10.0.0.144",
            "public_ip": "52.76.235.251",
            "subnet_id": "subnet-0cda38dab258b3ccf",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "nat-gw-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb7e8d875eeed52a",
            "id": "nat-08671ad1aec175f66",
            "network_interface_id": "eni-0109e0ed34115e2e9",
            "private_ip": "10.0.1.30",
            "public_ip": "54.251.96.221",
            "subnet_id": "subnet-02db824f5a7fc5fe2",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "nat-gw-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a4171e04ccb6a47f",
            "id": "r-rtb-079df1787607cb5041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-079df1787607cb504",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02118bd7bbbf58cec",
            "owner_id": "621567429603",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-079491ac00a51cca7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "private-route-ap-southeast-1a"
            },
            "vpc_id": "vpc-06dc50fdb423a122b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-068f264fee4e7d383",
            "owner_id": "621567429603",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08671ad1aec175f66",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "private-route-ap-southeast-1b"
            },
            "vpc_id": "vpc-06dc50fdb423a122b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-048bf6ebf7f75bdd4",
            "owner_id": "621567429603",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4171e04ccb6a47f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "public-route"
            },
            "vpc_id": "vpc-06dc50fdb423a122b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0560bbc5e2747cc6a",
            "route_table_id": "rtb-048bf6ebf7f75bdd4",
            "subnet_id": "subnet-0cda38dab258b3ccf"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054fdd9c68faea036",
            "route_table_id": "rtb-048bf6ebf7f75bdd4",
            "subnet_id": "subnet-02db824f5a7fc5fe2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc38fbda83181ee9",
            "route_table_id": "rtb-02118bd7bbbf58cec",
            "subnet_id": "subnet-061c526ba5ed3d948"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05999ed70fb14d32b",
            "route_table_id": "rtb-068f264fee4e7d383",
            "subnet_id": "subnet-0c881598660c3433d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gw",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:security-group/sg-0f57af13791e1b655",
            "description": "ECS SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f57af13791e1b655",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0fce162f35cdba3d4"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ECS_SG",
            "name_prefix": "",
            "owner_id": "621567429603",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dc50fdb423a122b"
          },
          "dependencies": [
            "module.vpc.aws_security_group.load_balancer_security_group",
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:security-group/sg-0fce162f35cdba3d4",
            "description": "ALB SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fce162f35cdba3d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB_SG",
            "name_prefix": "",
            "owner_id": "621567429603",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dc50fdb423a122b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:subnet/subnet-061c526ba5ed3d948",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-061c526ba5ed3d948",
            "map_public_ip_on_launch": false,
            "owner_id": "621567429603",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-06dc50fdb423a122b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:subnet/subnet-0c881598660c3433d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0c881598660c3433d",
            "map_public_ip_on_launch": false,
            "owner_id": "621567429603",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-06dc50fdb423a122b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:subnet/subnet-0cda38dab258b3ccf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0cda38dab258b3ccf",
            "map_public_ip_on_launch": false,
            "owner_id": "621567429603",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-06dc50fdb423a122b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:subnet/subnet-02db824f5a7fc5fe2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02db824f5a7fc5fe2",
            "map_public_ip_on_launch": false,
            "owner_id": "621567429603",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-06dc50fdb423a122b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.messi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "messi_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:621567429603:vpc/vpc-06dc50fdb423a122b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06608625e5201eb0b",
            "default_route_table_id": "rtb-079df1787607cb504",
            "default_security_group_id": "sg-0cc7cd7cdd0df4fad",
            "dhcp_options_id": "dopt-32a94057",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06dc50fdb423a122b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-079df1787607cb504",
            "owner_id": "621567429603",
            "tags": {
              "CostCenter": "Admin",
              "Developer": "Tien Nguyen",
              "Environment": "Development",
              "Name": "Messi-vpc"
            }
          }
        }
      ]
    }
  ]
}